# frills

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: frills_server.rs  lib.rs  tests.rs  utils.rs
src/client/: client.rs  mod.rs  worker.rs
src/codec/: codec.rs  message.rs  mod.rs
src/server/: client_thread.rs  connection_listener.rs  message.rs  mod.rs  server.rs
