[package]
name = "frills"
version = "0.1.0"
authors = ["d0nut <nathanial.lattimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1"
serde = { version = "^1", features = ["derive"]}
sharded-slab = "0.0.7"
tokio = { version = "^0.2", features = ["tcp", "rt-threaded"]}