[package]
name = "frills"
version = "0.1.0"
authors = ["d0nut <nathanial.lattimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1"
bytes = "^0.5"
futures = "^0.3"
futures-core = "0.3.1"
futures-util = "0.3.1"
pin-project = "0.4.6"
serde = { version = "^1", features = ["derive"]}
sharded-slab = "0.0.7"
tokio = { version = "0.2.6", features = ["tcp", "rt-threaded", "sync", "io-util"]}
tokio-util = { version = "0.2.0", features = ["codec"]}