[package]
name = "frills"
version = "0.1.0"
authors = ["d0nut <nathanial.lattimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "frills_server"
path = "src/frills_server.rs"

[dependencies]
bincode = "1.3"
bytes = "1"
clap = "2"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
pin-project = "1"
serde = { version = "^1", features = ["derive"]}
slab = "0.4"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "io-util", "time", "macros"]}
tokio-util = { version = "0.6", features = ["codec"]}
tokio-stream = "0.1"
tracing = "0.1"